@@ -3,6 +3,7 @@
 *******************************************************************************
 
 === 1.0.14 ===
+* Fixed improper expression parsing under certain conditions.
 * Removed Makefile.d. Dependencies are now automatically generated at the build stage.
 * Updated build scripts.
 
